--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -6354,7 +6354,7 @@
       "metadata": {
         "id": "oRWucK3we3g6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12163,6 +12163,17 @@
       "cell_type": "markdown",
       "source": [
         "7.1 Building simple classes\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "0YXKKOpz0SCb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
         "---\n",
         "Python is an object-oriented high-level programming (OOP) language. Objects are an important part of Python programming. In fact, everything is an object in Python with default data and some functionality. Objects have attributes (variables) and methods (functions) specified in the class. To build an object, you need to use a constructor function ( _ _ init _ _() ). A constructor is a special function that is used to make an instance of a class. A class is like a blueprint that helps to create an object. You can then use that object (instance) of a class to assign some data and functionality. There are four main principles of object-oriented high-level programming.\n",
         "\n",
@@ -12172,18 +12183,10 @@
         "\n",
         "3. Inheritance, and\n",
         "\n",
-        "4. Polymorphism.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Syntax:\n",
-        "\n",
-        "        class ClassName():\n",
-        "              def _ _ init _ _(self):\n",
-        "                  block of code\n"
+        "4. Polymorphism."
       ],
       "metadata": {
-        "id": "0YXKKOpz0SCb"
+        "id": "btW12ZJO65bQ"
       }
     },
     {
@@ -12192,12 +12195,35 @@
         "Note\n",
         "\n",
         "---\n",
-        "Unlike variables, classes always start with the capital letters.\n",
+        "Unlike variables, classes always start with the capital letters."
+      ],
+      "metadata": {
+        "id": "jNOztWcu2uYC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          class ClassName():\n",
+        "              def _ _ init _ _(self):\n",
+        "                  block of code"
+      ],
+      "metadata": {
+        "id": "_1TB3KnQ7Jau"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
         "\n",
         "---"
       ],
       "metadata": {
-        "id": "jNOztWcu2uYC"
+        "id": "yHbvH7VP7dnJ"
       }
     },
     {
@@ -12218,13 +12244,50 @@
       "cell_type": "markdown",
       "source": [
         "7.2 Classes and objects\n",
-        "---\n",
-        "The _ _ init _ _() function is called automatically everytime a new object is created. All python constructors must have at least one parameter, by convention it is called \"**self**\", however, you can call it anything you want. The \"**self**\" parameter is used to access variables that belong to the class. First argument of the constructor is always filled automatically for us. Attributes are just variables inside of your constructor function.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "6wgruaYIY95g"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "The *_ _ init _ _()* function is called automatically everytime a new object is created. All python constructors must have at least one parameter, by convention it is called *self*, however, you can call it anything you want. The *self* parameter is used to access variables that belong to the class. First argument of the constructor is always filled automatically for us. Attributes are just variables inside of your constructor function."
+      ],
+      "metadata": {
+        "id": "MRGTh71P7pFN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          class MyClass():\n",
+        "              def _ _init_ _ (self, parameter1, ...)\n",
+        "                  self.parameter1 = parameter1\n",
+        "                  .\n",
+        "                  .\n",
+        "                  ."
+      ],
+      "metadata": {
+        "id": "qGJUoXDW717A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "liVlt73G-UdM"
       }
     },
     {
@@ -12315,36 +12378,56 @@
         "mySecondObject.listInfo()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KWZ7jm2lACRB",
-        "outputId": "de4e1ffb-d987-4884-feaf-4a043308ce06"
+        "id": "KWZ7jm2lACRB"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello, My name is John and I am 48 years old.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "7.3 Encapsulation and abstraction\n",
-        "---\n",
-        " Encapsulation involves the bundling of data (attributes) and method (functions) that operate on data within a single unit. A single unit is known as a class. It allows one to access and modify the attributes while keeping the attributes private.\n",
-        "\n",
-        " Abstraction is a way to simplify the complex reality by creating a class and hide some unnecessary details. You can implement abstraction using classes and methods, where you show only the relevant details and hiding the internal implementation.  \n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "MP6T0xGIEQx7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Encapsulation involves the bundling of data (attributes) and method (functions) that operate on data within a single unit. A single unit is known as a class. It allows one to access and modify the attributes while keeping the attributes private.\n",
+        "\n",
+        "Abstraction is a way to simplify the complex reality by creating a class and hide some unnecessary details. You can implement abstraction using classes and methods, where you show only the relevant details and hiding the internal implementation."
+      ],
+      "metadata": {
+        "id": "Q7vFFim--hgH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below"
+      ],
+      "metadata": {
+        "id": "vVF_VrXh-qUz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "mcSikbyf_UAz"
       }
     },
     {
@@ -12508,14 +12591,48 @@
       "cell_type": "markdown",
       "source": [
         "Private property\n",
-        "---\n",
-        "One can have a property private that should be prefixed with an underscore _ or _ _ . While it does not make it entirely private, it sends a signal to a developer that these properties should not be accessed directly.\n",
-        "Changing a name with two underscores (mangling) makes it harder to access or override. However, you wont be able to hide the attributes completely and you can still access them.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "8eJwD8aVSaac"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "One can have a property private that should be prefixed with an underscore _ or _ _ . While it does not make it entirely private, it sends a signal to a developer that these properties should not be accessed directly.\n",
+        "Changing a name with two underscores (mangling) makes it harder to access or override. However, you wont be able to hide the attributes completely and you can still access them."
+      ],
+      "metadata": {
+        "id": "o_L17lRl_rl3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "            _myPrivateVariable\n",
+        "\n",
+        "          _ _myProtectedVariable"
+      ],
+      "metadata": {
+        "id": "I4l7OY0q_xqA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "QdNpHPZXAJsJ"
       }
     },
     {
@@ -12563,12 +12680,34 @@
       "source": [
         "Private method\n",
         "---\n",
-        "One can have a private method defined within a class. It also should be prefixed with an underscore _ or _ _ by convention.\n",
+        "Protected and private methods are used to control access to class methods, by following naming convention rather than strict enforcement. A protected method marked with the single leading underscore (e.g. _method), it indicates that this method is designed to be used only within the class and subclasses. You can still access it from outside but it will be against the convention and should be avoided. A private method, denoted by two leading undescores (e.g. _ _method) undergoes name mangling, which remains it internally to include the class name (e.g. _ClassName__method), making it harder to access it from outside. This provides stronger indication of private method."
+      ],
+      "metadata": {
+        "id": "pxBszfM2SqWQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "            _myProtectedMethod()\n",
+        "          _ _myPrivateMethod()"
+      ],
+      "metadata": {
+        "id": "HeJAVrm_Cnz-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
         "\n",
         "---"
       ],
       "metadata": {
-        "id": "pxBszfM2SqWQ"
+        "id": "YzLi98EeC_jk"
       }
     },
     {
@@ -12612,13 +12751,68 @@
       "cell_type": "markdown",
       "source": [
         "7.4 Enheritance\n",
-        "---\n",
-        " Enheritance provides a way to create a new class based on the existing class, inheriting its attributes and methods. We can create a superclass, which is broad and subclass that is more detailed. Here is an example of the inheritance.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "UN9AYtepZ4ei"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Inheritance is a fundamental concept in object-oriented programming that allows a class, which is called a child or subclass, to inherit the attributes and methods from another class, called a parent or superclass. This promotes code reuse, modularity, and extensibility. Inheritance is implemented by passing the parent class name in parentheses when defining the child class (e.g. class Child(Parent):) The Child class can use and override methods and properties from the Parent class. The Child class can define its own methods and properties. Python also supports multiple inheretence, where a clas can inherit from more than one Parent class."
+      ],
+      "metadata": {
+        "id": "0SfYlMRvDbMO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          Parent class\n",
+        "\n",
+        "            class ParentClass:\n",
+        "                def __init__(self):\n",
+        "                  print(\"Parent constructor\")\n",
+        "\n",
+        "                def parentMethod(self):\n",
+        "                  print(\"This is a method in the parent class\")\n",
+        "\n",
+        "          Child class inheriting from ParentClass\n",
+        "\n",
+        "            class ChildClass(ParentClass):\n",
+        "                def __init__(self):\n",
+        "                  super().__init__()  # Call the parent class constructor\n",
+        "                  print(\"Child constructor\")\n",
+        "\n",
+        "                def childMethod(self):\n",
+        "                  print(\"This is a method in the child class\")\n",
+        "\n",
+        "          Creating an object of the child class\n",
+        "\n",
+        "          myObject = ChildClass()\n",
+        "          myObject.parentMethod()   # Inherited from ParentClass\n",
+        "          myObject.childMethod()    # Defined in ChildClass\n"
+      ],
+      "metadata": {
+        "id": "fDwghUzhFW4n"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "pts0JqkfGCEG"
       }
     },
     {
@@ -12711,22 +12905,10 @@
         "print(myDog.__dict__)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UWe3bw8AAcj9",
-        "outputId": "8c7dc088-b951-40f9-d226-828cfe8e8961"
+        "id": "UWe3bw8AAcj9"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'color': 'golden'}\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -12840,17 +13022,40 @@
         "Note\n",
         "\n",
         "---\n",
-        "In case of super() keyword you do not need a self parameter since it is going to be taken automatically.\n",
-        "\n",
-        "___\n",
-        "\n",
-        "Syntax:\n",
-        "\n",
-        "        ClassName.__init__(self, varName)\n",
-        "          super().__init__(varName)"
+        "The *super()* keywords is used to call methods from a Parent or a Superclass withing a Child or Subclass. It is most commonly used to call the paent classes' constructor ( _ _ _init_ _ _ ) or to extend the functionality of inherited methods without fully overriding them. In case of *super()* keyword you do not need a self parameter since it is going to be taken automatically."
       ],
       "metadata": {
         "id": "j4ZXSUOPEg6l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          class ParentClass:\n",
+        "              def __init__(self):\n",
+        "              print(\"Parent constructor\")\n",
+        "        \n",
+        "          class ChildClass(ParentClass):\n",
+        "              def __init__(self):\n",
+        "              super().__init__()  # Calls Parent's __init__\n",
+        "              print(\"Child constructor\")"
+      ],
+      "metadata": {
+        "id": "pSyKbnk4G7HR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "GEmc9qhtHFEz"
       }
     },
     {
@@ -12894,18 +13099,49 @@
         "Note\n",
         "\n",
         "---\n",
-        "Method Resolution Order (MRO) is the order in which Python looks for a method or attribute when it is called on an instance of a class that involves inheritance. It becomes especially important in cases of multiple inheritance.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "Syntax:\n",
-        "\n",
-        "        Class Name._ _ mro _ _\n",
-        "                  "
+        "Method Resolution Order (MRO) is the order in which Python looks for a method or attribute when it is called on an instance of a class that involves inheritance. It becomes especially important in cases of multiple inheritance. When a class inherits from multiple paent classes, Python uses C3 linearization algorithm, also known as C3 MRO, to determine the order in which classes are searched."
       ],
       "metadata": {
         "id": "2yqf8aTgcglL"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          ClassName.mro()\n",
+        "          ClassName._ _ mro _ _                 "
+      ],
+      "metadata": {
+        "id": "fiKWcdWvJx-0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "pZJNWPWEK6d9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dog class MRO\n",
+        "print(Dog.mro())\n",
+        "# or\n",
+        "print(Dog.__mro__)"
+      ],
+      "metadata": {
+        "id": "QLWmadiOK-hz"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
