--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -13132,10 +13132,21 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dog class MRO\n",
-        "print(Dog.mro())\n",
-        "# or\n",
-        "print(Dog.__mro__)"
+        "class Animal:\n",
+        "    pass\n",
+        "\n",
+        "class Mammal(Animal):\n",
+        "    pass\n",
+        "\n",
+        "class Canine(Mammal):\n",
+        "    pass\n",
+        "\n",
+        "class Dog(Canine):\n",
+        "    pass\n",
+        "\n",
+        "print(Dog.mro())   # returns a list\n",
+        "\n",
+        "print(Dog.__mro__) # returns a tuple"
       ],
       "metadata": {
         "id": "QLWmadiOK-hz"
@@ -13159,15 +13170,102 @@
     {
       "cell_type": "markdown",
       "source": [
-        " 7.5  Method overriding\n",
-        "---\n",
-        "Method overriding provides a subclass to define a method that has alredy being\n",
-        "defined in its superclass.\n",
+        "Examples\n",
         "\n",
         "---"
       ],
       "metadata": {
+        "id": "KkocQKYNOHzV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Animal:\n",
+        "    def speak(self):\n",
+        "        print(\"Animal makes a sound\")\n",
+        "\n",
+        "class Mammal(Animal):\n",
+        "    def speak(self):\n",
+        "        print(\"Mammal makes a sound\")\n",
+        "\n",
+        "class Feline(Mammal):\n",
+        "    def speak(self):\n",
+        "        print(\"Feline makes a sound: Meow, meow!\")\n",
+        "\n",
+        "class Canine(Mammal):\n",
+        "    def speak(self):\n",
+        "        print(\"Canine makes a sound: Woof, woof!\")\n",
+        "\n",
+        "class Cat(Feline, Mammal):\n",
+        "    pass\n",
+        "\n",
+        "class Dog(Canine, Mammal):\n",
+        "    pass\n",
+        "\n",
+        "# Create instances of Cat and Dog\n",
+        "myCat = Cat()\n",
+        "myDog = Dog()\n",
+        "\n",
+        "# Call the speak method on both\n",
+        "myCat.speak()  # Which `speak()` will be called?\n",
+        "myDog.speak()  # Which `speak()` will be called?\n",
+        "\n",
+        "# Let's check MRO\n",
+        "\n",
+        "print(Cat.mro())\n",
+        "print(Dog.mro())"
+      ],
+      "metadata": {
+        "id": "5ajgFasROLFH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " 7.6  Method overriding\n",
+        "---"
+      ],
+      "metadata": {
         "id": "YHYe8k_mJ48T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Method overriding provides a subclass to define a method that has alredy being\n",
+        "defined in its superclass. The subclass method overrides the method in the paren class, allowing the subclass to provide a specific method. You override method in superclass by using the same name of the method in subclass. When you call a method in subclass the overriden method is invoked."
+      ],
+      "metadata": {
+        "id": "qX-ZmmmoPu2N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below"
+      ],
+      "metadata": {
+        "id": "4vaklaYgRPHm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "OAtxKkTXRUgO"
       }
     },
     {
@@ -13208,14 +13306,48 @@
     {
       "cell_type": "markdown",
       "source": [
-        "7.6 Polymorphism\n",
-        "---\n",
-        " Polymorphism is an ability for a method to be executed on different objects. We can have multiple classes with the same method name.  \n",
-        "\n",
+        "7.7 Polymorphism\n",
         "---"
       ],
       "metadata": {
         "id": "jd3fN1PBwFnD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Polymorphism in object-oriented programming refers to the ability of different classes to provide a common interface for methods, allowing objects of different types to be treated as instances of a common superclass. It enables a single method to behave differently based on the object that invokes it. This allows for flexibility and reusability in code, as the same method can be used with different types of objects, and each type can implement its own version of the method. Polymorphism can be achieved through method overriding (where a subclass provides its own implementation of a method) or method overloading (where methods with the same name but different parameters exist). It is a core concept of object-oriented programming, enabling more dynamic and adaptable code.\n",
+        "\n",
+        "Polymorphism is an ability for a method to be executed on different objects!"
+      ],
+      "metadata": {
+        "id": "VNLHvW7QRgAE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below"
+      ],
+      "metadata": {
+        "id": "1szARtsORnJN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "Mk9vXF5jRkuN"
       }
     },
     {
