--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -13449,7 +13449,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Section 8: Exceptions"
+        "# Section 8: Exceptions\n",
+        "\n",
+        "8.1 Syntax error\n",
+        "\n",
+        "8.2 Value error\n",
+        "\n",
+        "8.3 Exception with one error\n",
+        "\n",
+        "8.4 Exception with three errors\n",
+        "\n",
+        "8.5 Assertion exception\n",
+        "\n",
+        "8.6 Exception with else statament\n",
+        "\n",
+        "8.7 Exception with finally statement\n",
+        "\n",
+        "8.8 Exception with raise statement\n",
+        "\n",
+        "8.9 Exception object\n",
+        "\n",
+        "8.10 Creating your own exceptions\n"
       ],
       "metadata": {
         "id": "cC5EVsg9nIiH"
@@ -14030,21 +14050,31 @@
     {
       "cell_type": "markdown",
       "source": [
-        "8.10 Creating your own exceptions\n",
-        "---\n",
-        "\n",
+        "8.10 Hierarchy of exceptions\n",
         "---"
       ],
       "metadata": {
-        "id": "o5SW47xSIbTG"
+        "id": "hrLyO4E9c6mO"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "8.11 Subclasses of a class\n",
+        "Description\n",
+        "\n",
+        "\n",
         "---\n",
-        " There is an hierarchy of exceptions.\n",
+        "The hierarchy of exceptions in Python is organized as a class-based tree structure, with the base class BaseException at the top. All built-in exceptions are derived from this base class, either directly or indirectly. The most commonly used superclass for user-defined exceptions is Exception, which inherits from BaseException. Under Exception, there are many specific exception classes such as ValueError, TypeError, IndexError, and others, each representing different types of errors. Python also includes other branches under BaseException, such as SystemExit, KeyboardInterrupt, and GeneratorExit, which are used for system-level events and are typically not caught in most programs. Understanding this hierarchy allows developers to write more precise try-except blocks by catching general or specific exceptions as needed."
+      ],
+      "metadata": {
+        "id": "-iCso5eAco2h"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "          There is an hierarchy of exceptions.\n",
         "\n",
         "                BaseExceptions\n",
         "                    |\n",
@@ -14052,15 +14082,33 @@
         "                    |\n",
         "                ArithmeticError - LookupError - ...\n",
         "                    |\n",
-        "                ZeroDivisionError - ...\n",
+        "                ZeroDivisionError - ..."
+      ],
+      "metadata": {
+        "id": "SPSR0o_A0Bw1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
         "\n",
-        "\n",
-        " You can see all subclasses keyword with _ _ name _ _ method to print them all.\n",
+        "---\n",
+        "          print(subclass._ _ name _ _ )"
+      ],
+      "metadata": {
+        "id": "o5W5m49ecCNM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
         "\n",
         "---"
       ],
       "metadata": {
-        "id": "SPSR0o_A0Bw1"
+        "id": "ZW_pd1Cnb6rj"
       }
     },
     {
@@ -14095,6 +14143,87 @@
       ],
       "metadata": {
         "id": "bwCfo4HY4CBO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "8.11 Creating your own exceptions\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "o5SW47xSIbTG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Creating your own exceptions in Python involves defining a custom exception class that inherits from the built-in Exception class or one of its subclasses. This allows you to raise errors that are specific to your application's logic, making it easier to handle and debug unexpected situations. To create a custom exception, you define a class using the class keyword, give it a name that typically ends in \"Error\" (e.g., MyCustomError), and optionally customize the message or behavior by overriding methods like (_ _ _init_ _ _). You can then use the raise keyword to trigger your custom exception when a certain condition is met. For example, raise MyCustomError(\"Something went wrong\") will stop execution and display the custom message, which can be caught using a try-except block."
+      ],
+      "metadata": {
+        "id": "8QlmCvSkbeCE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          Define a custom exception class\n",
+        "          class MyCustomError(Exception):\n",
+        "              def _ _init_ _(self, message):\n",
+        "              super()._ _init_ _(message)\n",
+        "\n",
+        "          Use the custom exception\n",
+        "             x = -5\n",
+        "          if x < 0:\n",
+        "          raise MyCustomError(\"Value cannot be negative.\")"
+      ],
+      "metadata": {
+        "id": "DnuTwOU0dTNw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "n4XxfR5gd10z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define a custom exception\n",
+        "class DivisionByOddNumberError(Exception):\n",
+        "    def __init__(self, message=\"Cannot divide by an odd number.\"):\n",
+        "        self.message = message\n",
+        "        super().__init__(self.message)\n",
+        "\n",
+        "# Function that uses the custom exception\n",
+        "def divide_by_even_number(x, y):\n",
+        "    if y % 2 != 0:\n",
+        "        raise DivisionByOddNumberError()\n",
+        "    return x / y\n",
+        "\n",
+        "# Test the function\n",
+        "try:\n",
+        "    result = divide_by_even_number(10, 3)\n",
+        "    print(\"Result:\", result)\n",
+        "except DivisionByOddNumberError as e:\n",
+        "    print(\"Custom Exception Caught:\", e)\n"
+      ],
+      "metadata": {
+        "id": "-jxC5ifkeIrk"
       },
       "execution_count": null,
       "outputs": []
